Bug 219829 Allow mixing length and percentage values with keyword values for the background-position property, which is now allowed per section 14.2.1 of CSS 2.1 r+sr=dbaron a=asa